@@ -1,7 +1,7 @@
 /*
- * $Id$ 
+ * $Id$
  *
- * Copyright 2008 samaxes.com
+ * Copyright 2011 samaxes.com
  * 
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -27,22 +27,13 @@ import javax.servlet.ServletRequest;
 import javax.servlet.ServletResponse;
 import javax.servlet.http.HttpServletResponse;
 
-import com.samaxes.filter.util.CacheParameter;
-import com.samaxes.filter.util.Cacheability;
-
 /**
- * Filter responsible for browser caching.
+ * Completely disable browser caching.
  * 
  * @author Samuel Santos
- * @version $Revision: 25 $
+ * @version $Revision$
  */
-public class CacheFilter implements Filter {
-
-    private Cacheability cacheability;
-
-    private boolean isStatic;
-
-    private long seconds;
+public class NoCacheFilter implements Filter {
 
     /**
      * Place this filter into service.
@@ -52,17 +43,6 @@ public class CacheFilter implements Filter {
      * @throws ServletException to inform the container to not place the filter into service
      */
     public void init(FilterConfig filterConfig) throws ServletException {
-        cacheability = (Boolean.valueOf(filterConfig.getInitParameter(CacheParameter.PRIVATE.getName()))) ? Cacheability.PRIVATE
-                : Cacheability.PUBLIC;
-        isStatic = Boolean.valueOf(filterConfig.getInitParameter(CacheParameter.STATIC.getName()));
-
-        try {
-            seconds = Long.valueOf(filterConfig.getInitParameter(CacheParameter.EXPIRATION_TIME.getName()));
-        } catch (NumberFormatException e) {
-            throw new ServletException(new StringBuilder("The initialization parameter ").append(
-                    CacheParameter.EXPIRATION_TIME.getName()).append(" is missing for filter ").append(
-                    filterConfig.getFilterName()).append(".").toString());
-        }
     }
 
     /**
@@ -75,23 +55,10 @@ public class CacheFilter implements Filter {
     public void doFilter(ServletRequest servletRequest, ServletResponse servletResponse, FilterChain filterChain)
             throws IOException, ServletException {
         HttpServletResponse httpServletResponse = (HttpServletResponse) servletResponse;
-        StringBuilder cacheControl = new StringBuilder(cacheability.getValue());
-
-        if (!isStatic) {
-            cacheControl.append(", must-revalidate");
-        }
 
         // set cache directives
-        httpServletResponse.setDateHeader("Expires", System.currentTimeMillis() + seconds * 1000L);
-        httpServletResponse.setHeader("Cache-Control", cacheControl.toString());
-
-        /*
-         * By default, some servers (e.g. Tomcat) will set headers on any SSL content to deny caching. Setting the
-         * Pragma header to null or to an empty string takes care of user-agents implementing HTTP 1.0.
-         */
-        if (httpServletResponse.containsHeader("Pragma")) {
-            httpServletResponse.setHeader("Pragma", null);
-        }
+        httpServletResponse.setDateHeader("Expires", 0L);
+        httpServletResponse.setHeader("Cache-Control", "no-cache, no-store, must-revalidate");
 
         filterChain.doFilter(servletRequest, servletResponse);
     }
